# necron-prism

./: .gitignore  .goreleaser.yml  Cargo.toml  LICENSE  Makefile  README.md  README_EN.md  config.schema.json  config.toml  deny.toml
.github/workflows/: build.yml  ci.yml  lint.yml  release.yml  test.yml
crates/minecraft/: Cargo.toml
crates/minecraft/src/: constants.rs  error.rs  lib.rs  packet_io.rs  protocol.rs  test.rs  types.rs
crates/prism/: Cargo.toml
crates/prism-minecraft/: Cargo.toml
crates/prism-minecraft/src/: lib.rs  packet_io.rs  protocol.rs  test.rs
crates/prism/src/: lib.rs
crates/prism/src/benchmark/: harness.rs  mod.rs  scenarios.rs
crates/prism/src/config/: default.rs  literals.rs  mod.rs  schema.rs  test.rs  types.rs
crates/prism/src/context/: mod.rs
crates/prism/src/hooks/: mod.rs
crates/prism/src/inbound/: mod.rs
crates/prism/src/motd/: context.rs  legacy.rs  mod.rs  rewrite.rs  service.rs  upstream.rs
crates/prism/src/network/: mod.rs
crates/prism/src/outbound/: mod.rs
crates/prism/src/players/: mod.rs
crates/prism/src/relay/: linux.rs  mod.rs  test.rs
crates/prism/src/session/: mod.rs  test.rs
crates/prism/src/stats/: mod.rs  test.rs
crates/prism/src/template/: mod.rs  test.rs
crates/prism/src/transport/: mod.rs  test.rs
probe/: go.mod
scripts/: benchmark.py  build.py  common.py
src/: benchmark.rs  lib.rs  main.rs  minecraft.rs  relay.rs
src/benchmark/: harness.rs  scenarios.rs
src/config/: api.rs  file.rs  loader.rs  mod.rs  test.rs
src/minecraft/: constants.rs  error.rs  mod.rs  packet_io.rs  protocol.rs  tests.rs  types.rs
src/proxy/: app.rs  context.rs  hooks.rs  lifecycle.rs  logging.rs  mod.rs  motd.rs  players.rs  socket.rs  stats.rs  template.rs
src/proxy/api/: client.rs  mod.rs  service.rs  types.rs
src/proxy/app/: executor.rs  lifecycle.rs  state.rs
src/proxy/config/: checker.rs  default.rs  literals.rs  loader.rs  mod.rs  normalizer.rs  schema.rs  schema_types.rs  test.rs  tests.rs  types.rs
src/proxy/inbound/: mod.rs
src/proxy/logging/: fmt.rs  mod.rs
src/proxy/motd/: cache.rs  context.rs  favicon.rs  legacy.rs  mod.rs  rewrite.rs  service.rs  upstream.rs
src/proxy/motd_json/: mod.rs
src/proxy/network/: mod.rs  socket.rs  test.rs
src/proxy/outbound/: mod.rs
src/proxy/players/: mod.rs  registry.rs  test.rs  types.rs
src/proxy/relay/: linux.rs  mod.rs
src/proxy/routing/: mod.rs
src/proxy/stats/: connection.rs  counters.rs  mod.rs
src/proxy/template/: mod.rs  test.rs
src/proxy/traffic/: counters.rs  mod.rs  reporter.rs  stats_logger.rs  test.rs
src/proxy/transport/: forward.rs  login.rs  mod.rs  types.rs
src/proxy/transport/relay/: linux.rs  mod.rs
