[package]
name = "necron-prism"
edition = "2024"
authors = [ "Me0wo", "Necron-Dev" ]

[features]
default = ["http-api"]
http-api = ["dep:reqwest", "dep:tokio", "tokio/io-uring"]
schema = ["dep:schemars"]
benchmark = ["dep:criterion", "dep:nerd-font-symbols", "dep:tokio"]

[dependencies]
base64 = "0.22"
mime_guess = { version = "2.0", default-features = false }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "query", "rustls"], optional = true }
schemars = { version = "1.0", features = ["derive"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
socket2 = { version = "0.6", default-features = false, features = ["all"] }
tokio = { version = "1.48", default-features = false, features = ["rt", "rt-multi-thread", "time", "net", "io-util", "sync", "macros", "fs"], optional = true }
toml = "1.0.7"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
valence_protocol = "0.2.0-alpha.1"
thiserror = "2.0.18"
anyhow = "1.0"
parking_lot = "0.12"
libc = "0.2"
lru = "0.16.3"
http = "1.4.0"
dashmap = "6.1"
criterion = { version = "0.8.2", features = ["html_reports"], optional = true }
nerd-font-symbols = { version = "0.3", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
rustix = { version = "1.1", default-features = false, features = ["pipe", "std"] }

[[bin]]
name = "generate_config_schema"
path = "src/bin/generate_config_schema.rs"
required-features = ["schema"]

[[bin]]
name = "run_benchmark"
path = "src/bin/run_benchmark.rs"
required-features = ["benchmark"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
incremental = false
