[workspace]
members = [".", "crates/prism-minecraft", "crates/prism"]
resolver = "2"

[package]
name = "necron-prism"
edition = "2024"
authors = [ "Me0wo", "Necron-Dev" ]

[features]
default = ["http-api"]
http-api = ["dep:reqwest"]
linux-accel = ["prism/linux-accel"]
schema = ["dep:schemars", "prism/schema"]
benchmark = ["prism/benchmark"]

[dependencies]
prism = { path = "crates/prism" }
prism-minecraft = { path = "crates/prism-minecraft" }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "registry"] }
tracing-appender = "0.2"
tokio = { version = "1.48", default-features = false, features = ["rt", "rt-multi-thread", "time", "net", "io-util", "sync", "macros", "fs", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0.7"
schemars = { version = "1.0", features = ["derive"], optional = true }
flurry = "0.5"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "query", "rustls"], optional = true }
http = "1.4.0"
tokio-util = "0.7"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
flate2 = "1.0"
owo-colors = "4.3.0"
uuid = { version = "1", features = ["v3"] }
rayon = "1.10"

[[bin]]
name = "schema"
path = "src/bin/schema.rs"
required-features = ["schema"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
incremental = false
