[package]
name = "prism-minecraft"
edition = "2024"
version = "0.0.0"

[dependencies]
regex = "1.11"
smallvec = { version = "1", features = ["write"] }
thiserror = "2.0.18"
tokio = { version = "1.48", default-features = false, features = ["io-util", "macros", "test-util"] }
valence_protocol = "0.2.0-alpha.1"
